[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "delta-cas"
version = "0.1.0"
description = "Delta-based Compare-And-Swap state management for multi-agent systems"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Alen Pu"}]
keywords = ["multi-agent", "state-management", "cas", "delta", "distributed"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.11"
dependencies = []   # zero hard dependencies — LLM clients are optional

[project.optional-dependencies]
anthropic = ["anthropic>=0.20"]
openai    = ["openai>=1.0"]
all       = ["anthropic>=0.20", "openai>=1.0"]
dev       = ["pytest>=7", "pytest-cov", "ruff"]

[project.urls]
Homepage   = "https://github.com/alenpu/delta-cas"
Repository = "https://github.com/alenpu/delta-cas"
Issues     = "https://github.com/alenpu/delta-cas/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["delta_cas*"]

[tool.ruff]
line-length = 100
target-version = "py311"
